--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,37 @@ boy {
   gap: 20px;
   flex-direction: column;
 }
+
+@media (max-width: 768px) {
+  .contenedor__principal {
+    position: absolute;
+    top: 400px;
+    left: 20px;
+    height: 250px;
+    min-width: 100px;
+    display: flex;
+    flex-direction: column;
+  }
+  .contenedor__boton {
+    position: absolute;
+    top: 300px;
+    left: 80px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+  }
+  .contador__logo--contenedor {
+    position: absolute;
+    top: 0;
+    left: 0px;
+    width: 100%;
+    display: flex;
+  }
+  .contador__logo {
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    border: 2px solid #4c2882;
+    margin: 15px;
+  }
+}
